--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -5,8 +5,91 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="600" Width="1067"
+        WindowState="Maximized">
+    <Window.Resources>
+        <Style TargetType="GroupBox">
+            <Setter Property="Padding" Value="5"/>
+        </Style>
+    </Window.Resources>
+    <TabControl x:Name="tabControl" Padding="2,2,2,2">
+        <TabItem Header="Dashboard">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
 
-    </Grid>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="2*" MinWidth="250"/>
+                        <ColumnDefinition Width="3*"/>
+                    </Grid.ColumnDefinitions>
+                    
+                    <GroupBox Header="Keys present">
+                        <DataGrid />
+                    </GroupBox>
+
+                    <StackPanel Grid.Column="1" VerticalAlignment="Center" Margin="10">
+                        <GroupBox Header="Search" Margin="0,0,0,10">
+                            <TextBox />
+                        </GroupBox>
+                        <GroupBox Header="Operations" Margin="0,0,0,10">
+                            <StackPanel VerticalAlignment="Center">
+                                <Button Content="Book out &gt;&gt;" Margin="0,0,0,10"/>
+                                <Button Content="&lt;&lt; Book in"/>
+                            </StackPanel>
+                        </GroupBox>
+                        <GroupBox Header="Details" Margin="0,0,0,10">
+                            <StackPanel>
+                                <StackPanel Orientation="Horizontal">
+                                    <Label Content="Test" VerticalAlignment="Center"/>
+                                    <TextBox Text="This is fine" VerticalAlignment="Center"/>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal">
+                                    <Label Content="Booked out by" VerticalAlignment="Center"/>
+                                    <TextBox Text="3SG TOH JUN HAO" VerticalAlignment="Center"/>
+                                </StackPanel>
+                            </StackPanel>
+                        </GroupBox>
+                    </StackPanel>
+
+                    <GroupBox Header="Keys booked out" Grid.Column="2" Margin="0,0,10,0">
+                        <DataGrid />
+                    </GroupBox>
+                </Grid>
+
+                <DockPanel Grid.Column="1">
+                    <StackPanel DockPanel.Dock="Top">
+                        <GroupBox Header="External keypress">
+                            <DockPanel Width="180">
+                                <TextBlock DockPanel.Dock="Left" VerticalAlignment="Top">
+                                    <Span FontSize="30" BaselineAlignment="Baseline"><Bold>3</Bold>/65</Span> drawn out
+                                </TextBlock>
+                            </DockPanel>
+                        </GroupBox>
+                        <GroupBox Header="149 Keypress">
+                            <DockPanel Width="180">
+                                <TextBlock DockPanel.Dock="Left" VerticalAlignment="Top">
+                                    <Span FontSize="30" BaselineAlignment="Baseline"><Bold>18</Bold>/40</Span> drawn out
+                                </TextBlock>
+                            </DockPanel>
+                        </GroupBox>
+                        <GroupBox Header="Internal keypress">
+                            <DockPanel Width="180">
+                                <TextBlock DockPanel.Dock="Left" VerticalAlignment="Top">
+                                    <Span FontSize="30" BaselineAlignment="Baseline"><Bold>3</Bold>/24</Span> drawn out
+                                </TextBlock>
+                            </DockPanel>
+                        </GroupBox>
+                    </StackPanel>
+                </DockPanel>
+            </Grid>
+        </TabItem>
+        <TabItem Header="Edit">
+            <Grid Background="#FFE5E5E5"/>
+        </TabItem>
+    </TabControl>
+
 </Window>
