--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -6,24 +6,42 @@
         xmlns:model="clr-namespace:Database.DatabaseModels;assembly=Database"
         mc:Ignorable="d"
         Title="MainWindow" Height="900" Width="1600"
-        WindowState="Maximized">
+        WindowState="Maximized"
+        Style="{DynamicResource {x:Type Window}}">
     <Window.Resources>
-        <Style TargetType="GroupBox">
-            <Setter Property="Padding" Value="5"/>
-        </Style>
         <DataTemplate DataType="{x:Type model:KeyBunch}">
-            <StackPanel Orientation="Horizontal">
-                <TextBlock FontSize="20" Text="{Binding Path=BunchNumber}" Margin="0,0,10,0"/>
-                <StackPanel>
-                    <TextBlock Text="{Binding Path=Name}"/>
-                    <TextBlock>
-                        Number of keys: <TextBlock Text="{Binding Path=NumberOfKeys}"/>
-                    </TextBlock>
+            <Border Padding="10"  TextElement.Foreground="{DynamicResource NormalTextBrush}" Background="#4b566a">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock FontSize="20" Text="{Binding Path=BunchNumber}" Margin="0,0,10,0"/>
+                    <StackPanel>
+                        <TextBlock Text="{Binding Path=Name}"/>
+                        <TextBlock>
+                            Number of keys: <TextBlock Text="{Binding Path=NumberOfKeys}"/>
+                        </TextBlock>
+                    </StackPanel>
                 </StackPanel>
-            </StackPanel>
+            </Border>
         </DataTemplate>
+        <Style x:Key="KeyListItemContainerStyle" TargetType="ListBoxItem">
+            <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ListBoxItem">
+                        <Border x:Name="ContainerBorder" Padding="2">
+                            <ContentPresenter x:Name="Item"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter TargetName="ContainerBorder" Property="Background" Value="{DynamicResource ResourceKey=SelectionBorderBrush}"/>
+                                <Setter TargetName="Item" Property="TextElement.FontWeight" Value="SemiBold"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Window.Resources>
-    <TabControl x:Name="tabControl" Padding="2,2,2,2">
+    <TabControl x:Name="tabControl" Padding="10" Margin="0,5,0,0" Background="{DynamicResource ContentBackgroundBrush}" BorderThickness="0">
         <TabItem Header="Dashboard">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -39,55 +57,61 @@
                     </Grid.ColumnDefinitions>
                     
                     <GroupBox Header="Keys present">
-                        <ListBox ItemsSource="{Binding PresentKeys}"/>
+                        <ListBox ItemsSource="{Binding PresentKeys}" 
+                                 IsSynchronizedWithCurrentItem="True" 
+                                 BorderThickness="0"
+                                 ItemContainerStyle="{StaticResource KeyListItemContainerStyle}" />
                     </GroupBox>
 
-                    <StackPanel Grid.Column="1" VerticalAlignment="Center" Margin="10">
+                    <StackPanel Grid.Column="1" VerticalAlignment="Top" Margin="10,0">
                         <GroupBox Header="Search" Margin="0,0,0,10">
                             <TextBox />
                         </GroupBox>
                         <GroupBox Header="Operations" Margin="0,0,0,10">
                             <StackPanel VerticalAlignment="Center">
-                                <Button Content="Book out &gt;&gt;" Margin="0,0,0,10"/>
-                                <Button Content="&lt;&lt; Book in"/>
+                                <Button Content="Book out &gt;&gt;" Margin="0,0,0,10" Style="{DynamicResource HighlightButton}"/>
+                                <Button Content="&lt;&lt; Book in" Style="{DynamicResource HighlightButton}"/>
                             </StackPanel>
                         </GroupBox>
                         <GroupBox Header="Details" Margin="0,0,0,10">
                             <StackPanel>
-                                <StackPanel Orientation="Horizontal">
+                                <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
                                     <Label Content="Test" VerticalAlignment="Center"/>
-                                    <TextBox Text="This is fine" VerticalAlignment="Center"/>
-                                </StackPanel>
-                                <StackPanel Orientation="Horizontal">
+                                    <TextBox Text="This is fine" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+                                </DockPanel>
+                                <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
                                     <Label Content="Booked out by" VerticalAlignment="Center"/>
-                                    <TextBox Text="3SG TOH JUN HAO" VerticalAlignment="Center"/>
-                                </StackPanel>
+                                    <TextBox Text="3SG TOH JUN HAO" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+                                </DockPanel>
                             </StackPanel>
                         </GroupBox>
                     </StackPanel>
 
                     <GroupBox Header="Keys booked out" Grid.Column="2" Margin="0,0,10,0">
-                        <ListBox ItemsSource="{Binding BookedOutKeys}"/>
+                        <ListBox ItemsSource="{Binding BookedOutKeys}" 
+                                 IsSynchronizedWithCurrentItem="True" 
+                                 BorderThickness="0"
+                                 ItemContainerStyle="{StaticResource KeyListItemContainerStyle}" />
                     </GroupBox>
                 </Grid>
 
                 <DockPanel Grid.Column="1">
                     <StackPanel DockPanel.Dock="Top">
-                        <GroupBox Header="External keypress">
+                        <GroupBox Header="External keypress" Margin="0,0,0,10">
                             <DockPanel Width="180">
                                 <TextBlock DockPanel.Dock="Left" VerticalAlignment="Top">
                                     <Span FontSize="30" BaselineAlignment="Baseline"><Bold>3</Bold>/65</Span> drawn out
                                 </TextBlock>
                             </DockPanel>
                         </GroupBox>
-                        <GroupBox Header="149 Keypress">
+                        <GroupBox Header="149 Keypress" Margin="0,0,0,10">
                             <DockPanel Width="180">
                                 <TextBlock DockPanel.Dock="Left" VerticalAlignment="Top">
                                     <Span FontSize="30" BaselineAlignment="Baseline"><Bold>18</Bold>/40</Span> drawn out
                                 </TextBlock>
                             </DockPanel>
                         </GroupBox>
-                        <GroupBox Header="Internal keypress">
+                        <GroupBox Header="Internal keypress" Margin="0,0,0,10">
                             <DockPanel Width="180">
                                 <TextBlock DockPanel.Dock="Left" VerticalAlignment="Top">
                                     <Span FontSize="30" BaselineAlignment="Baseline"><Bold>3</Bold>/24</Span> drawn out
@@ -99,7 +123,7 @@
             </Grid>
         </TabItem>
         <TabItem Header="Edit">
-            <Grid Background="#FFE5E5E5"/>
+            <Grid/>
         </TabItem>
     </TabControl>
 
