--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -68,25 +68,70 @@
                     </GroupBox>
 
                     <StackPanel Grid.Column="1" VerticalAlignment="Top" Margin="10,0">
+                        <GroupBox Header="Debug" Margin="0,0,0,10">
+                            <Button Click="Button_Click" Content="Show selected item"
+                                    Style="{DynamicResource HighlightButton}"/>
+                        </GroupBox>
                         <GroupBox Header="Search" Margin="0,0,0,10">
                             <TextBox />
                         </GroupBox>
-                        <GroupBox Header="Operations" Margin="0,0,0,10">
-                            <StackPanel VerticalAlignment="Center">
-                                <Button Content="Book out &gt;&gt;" Margin="0,0,0,10" Style="{DynamicResource HighlightButton}"/>
-                                <Button Content="&lt;&lt; Book in" Style="{DynamicResource HighlightButton}"/>
-                            </StackPanel>
-                        </GroupBox>
-                        <GroupBox Header="Details" Margin="0,0,0,10">
+                        <GroupBox Header="Details" Margin="0,0,0,10" Visibility="{Binding Path=SelectedKeyBunch, Converter={StaticResource NullToVis}}">
                             <StackPanel>
-                                <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
-                                    <Label Content="Test" VerticalAlignment="Center"/>
-                                    <TextBox Text="This is fine" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
-                                </DockPanel>
-                                <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
-                                    <Label Content="Booked out by" VerticalAlignment="Center"/>
-                                    <TextBox Text="3SG TOH JUN HAO" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
-                                </DockPanel>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="{Binding Path=SelectedKeyBunch.BunchNumber}" FontSize="60" Padding="4,0,0,0"/>
+                                    <StackPanel VerticalAlignment="Center" Margin="8,0">
+                                        <TextBlock Text="{Binding Path=SelectedKeyBunch.Name}" FontSize="18"/>
+                                        <TextBlock>
+                                            <TextBlock Text="{Binding Path=SelectedKeyBunch.NumberOfKeys}"/> keys in bunch
+                                        </TextBlock>
+                                        <TextBlock>
+                                            Key List: <TextBlock Text="{Binding Path=SelectedKeyBunch.KeyList.Name}"/>
+                                        </TextBlock>
+                                    </StackPanel>
+                                </StackPanel>
+                                <StackPanel Visibility="{Binding Path=LogEntryForSelectedBunch, Converter={StaticResource LogToVis}, ConverterParameter=True}">
+                                    <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
+                                        <Label Content="Date booked out" VerticalAlignment="Center"/>
+                                        <TextBox Text="{Binding Path=LogEntryForSelectedBunch.TimeIssued, StringFormat='d/M/yyyy HH:mm'}" IsReadOnly="True" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+                                    </DockPanel>
+                                    <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
+                                        <Label Content="Booked out by" VerticalAlignment="Center"/>
+                                        <TextBox Text="{Binding Path=LogEntryForSelectedBunch.PersonDrawingKey.Name}" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+                                    </DockPanel>
+                                    <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
+                                        <Label Content="Issued by" VerticalAlignment="Center"/>
+                                        <TextBox Text="{Binding Path=LogEntryForSelectedBunch.PersonIssuingKey.Name}" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+                                    </DockPanel>
+                                    <Button Content="&lt;&lt; Book in" Margin="0,10,0,10" Style="{DynamicResource HighlightButton}"/>
+                                </StackPanel>
+                                <StackPanel Visibility="{Binding Path=LogEntryForSelectedBunch, Converter={StaticResource LogToVis}}">
+                                    <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
+                                        <Label Content="Last booked out at" VerticalAlignment="Center"/>
+                                        <TextBox Text="{Binding Path=LogEntryForSelectedBunch.TimeIssued, StringFormat='d/M/yyyy HH:mm'}" IsReadOnly="True" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+                                    </DockPanel>
+                                    <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
+                                        <Label Content="Last borrowed by" VerticalAlignment="Center"/>
+                                        <TextBox Text="{Binding Path=LogEntryForSelectedBunch.PersonDrawingKey.Name}" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+                                    </DockPanel>
+                                    <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
+                                        <Label Content="Last issued by" VerticalAlignment="Center"/>
+                                        <TextBox Text="{Binding Path=LogEntryForSelectedBunch.PersonIssuingKey.Name}" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+                                    </DockPanel>
+                                    <Separator Margin="0,10,0,10"/>
+                                    <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
+                                        <Label Content="Last booked in at" VerticalAlignment="Center"/>
+                                        <TextBox Text="{Binding Path=LogEntryForSelectedBunch.TimeReturned, StringFormat='d/M/yyyy HH:mm'}" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+                                    </DockPanel>
+                                    <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
+                                        <Label Content="Last returned by" VerticalAlignment="Center"/>
+                                        <TextBox Text="{Binding Path=LogEntryForSelectedBunch.PersonReturningKey.Name}" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+                                    </DockPanel>
+                                    <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
+                                        <Label Content="Last received by" VerticalAlignment="Center"/>
+                                        <TextBox Text="{Binding Path=LogEntryForSelectedBunch.PersonReceivingKey.Name}" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+                                    </DockPanel>
+                                    <Button Content="Book out &gt;&gt;" Margin="0,10,0,10" Style="{DynamicResource HighlightButton}"/>
+                                </StackPanel>
                             </StackPanel>
                         </GroupBox>
                     </StackPanel>
