--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -8,7 +8,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="900" Width="1600" MinWidth="900"
         WindowState="Maximized"
-        Style="{DynamicResource {x:Type Window}}">
+        Style="{DynamicResource {x:Type Window}}"
+        KeyDown="Window_KeyDown">
     <Window.Resources>
         <DataTemplate DataType="{x:Type vm:DashboardKeyListItem}">
             <Border Padding="10" TextElement.Foreground="{DynamicResource NormalTextBrush}" Background="#4b566a">
@@ -93,7 +94,8 @@
                                  ItemContainerStyle="{StaticResource KeyListItemContainerStyle}"
                                  SelectedValue="{Binding SelectedKeyBunch}"
                                  SelectionMode="Extended"
-                                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"/>
+                                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                                 PreviewKeyDown="Window_KeyDown"/>
                     </GroupBox>
                     <Grid Margin="10,0,10,0" VerticalAlignment="Stretch" Grid.Column="1">
                         <Grid.RowDefinitions>
@@ -102,7 +104,7 @@
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
                        <GroupBox Header="Search" Margin="0,0,0,10" Grid.Row="1">
-                            <TextBox />
+                            <TextBox x:Name="SearchBox" PreviewKeyDown="Window_KeyDown" />
                         </GroupBox>
                         <GroupBox Grid.Row="2" Header="Details" Visibility="{Binding Path=SelectedKeyBunch, Converter={StaticResource NullToVis}}">
                             <ScrollViewer VerticalScrollBarVisibility="Auto">
@@ -112,8 +114,8 @@
                                         ItemTemplate="{StaticResource ResourceKey=KeyBunchDetails}"
                                         BorderThickness="0"/>
                                     <StackPanel Visibility="{Binding Path=SelectedKeyBunches, Converter={StaticResource MultipleToInvis}, ConverterParameter=Invert}">
-                                        <Button Click="Button_Click" Visibility="{Binding Path=SelectedKeyBunchesAllBookedOut, Converter={StaticResource BoolToVis}}" Style="{DynamicResource HighlightButton}" Margin="0,0,0,10">&lt;&lt; Book all in</Button>
-                                        <Button Click="Button_Click" Visibility="{Binding Path=SelectedKeyBunchesAllBookedIn, Converter={StaticResource BoolToVis}}" Style="{DynamicResource HighlightButton}" Margin="0,0,0,10">Book all out &gt;&gt;</Button>
+                                        <Button Click="StartBookingWindow" Visibility="{Binding Path=SelectedKeyBunchesAllBookedOut, Converter={StaticResource BoolToVis}}" Style="{DynamicResource HighlightButton}" Margin="0,0,0,10">&lt;&lt; Book all in</Button>
+                                        <Button Click="StartBookingWindow" Visibility="{Binding Path=SelectedKeyBunchesAllBookedIn, Converter={StaticResource BoolToVis}}" Style="{DynamicResource HighlightButton}" Margin="0,0,0,10">Book all out &gt;&gt;</Button>
                                     </StackPanel>
                                     <StackPanel Visibility="{Binding Path=SelectedKeyBunches, Converter={StaticResource MultipleToInvis}}">
                                         <StackPanel Visibility="{Binding Path=LogEntryForSelectedBunch, Converter={StaticResource LogToVis}, ConverterParameter=True}">
@@ -129,7 +131,7 @@
                                                 <Label Content="Issued by" VerticalAlignment="Center"/>
                                                 <TextBox Text="{Binding Path=LogEntryForSelectedBunch.PersonIssuingKey.Name}" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
                                             </DockPanel>
-                                            <Button Click="Button_Click" Content="&lt;&lt; Book in" Margin="0,10,0,10" Style="{DynamicResource HighlightButton}"/>
+                                            <Button Click="StartBookingWindow" Content="&lt;&lt; Book in" Margin="0,10,0,10" Style="{DynamicResource HighlightButton}"/>
                                         </StackPanel>
                                         <StackPanel Visibility="{Binding Path=LogEntryForSelectedBunch, Converter={StaticResource LogToVis}}">
                                             <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
@@ -157,7 +159,7 @@
                                                 <Label Content="Last received by" VerticalAlignment="Center"/>
                                                 <TextBox Text="{Binding Path=LogEntryForSelectedBunch.PersonReceivingKey.Name}" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
                                             </DockPanel>
-                                            <Button Click="Button_Click" Content="Book out &gt;&gt;" Margin="0,10,0,10" Style="{DynamicResource HighlightButton}"/>
+                                            <Button Click="StartBookingWindow" Content="Book out &gt;&gt;" Margin="0,10,0,10" Style="{DynamicResource HighlightButton}"/>
                                         </StackPanel>
                                     </StackPanel>
                                 </StackPanel>
@@ -172,7 +174,8 @@
                                  ItemContainerStyle="{StaticResource KeyListItemContainerStyle}" 
                                  SelectedValue="{Binding SelectedKeyBunch}"
                                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                                 SelectionMode="Extended"/>
+                                 SelectionMode="Extended"
+                                 PreviewKeyDown="Window_KeyDown"/>
                     </GroupBox>
                 </Grid>
 
